--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,28 @@ a {
   color: #fff;
 }
 
+.btn {
+  padding: 0.25rem 0.75rem;
+  font-size: inherit;
+  text-transform: capitalize;
+  border: none;
+  border-radius: 5px;
+}
+
+.btn:hover {
+  text-decoration: underline;
+}
+
+.btn:active {
+  transform: scale(0.9);
+  text-decoration: none;
+}
+
+.primary-btn {
+  background-color: var(--btn-primary);
+  color: var(--clr-white);
+}
+
 .navbar {
   height: 5rem;
   background-color: var(--clr-blue);
@@ -96,4 +118,21 @@ a {
 
 .link a:active {
   color: var(--clr-light-blue);
+}
+
+main {
+  height: calc(100vh - 5rem);
+  display: grid;
+  place-content: center;
+  gap: 1rem;
+}
+
+.error {
+  width: fit-content;
+  text-align: center;
+  margin: 4rem auto;
+}
+
+.error .btn {
+  margin: 2rem 0;
 }
